List tokens (#17)
* remove print

* implement jwt generator

* register command to generate a new jwt

* implement query and endpoint to return a project's tokens
